Update Extração de dados - Usuário - Twitter.ipynb

--- a/Twitter Crawler/Extração de dados - Usuário - Twitter.ipynb
+++ b/Twitter Crawler/Extração de dados - Usuário - Twitter.ipynb
@@ -35,13 +35,13 @@
     "\n",
     "# acessar a aba \"Keys and Access Tokens\"\n",
     "# passa o Consumer Key e o Consumer Secret\n",
-    "auth = tweepy.OAuthHandler('RG52I3lXP3Sik5rVayqNHJB89', 'd2NEPQuzFFYNCYtxJFdBpgiDB7wB8Tf0ke4MW5jsXjuWf2TQjk')\n",
+    "auth = tweepy.OAuthHandler('Inserir chaves da API', 'Inserir chaves da API')\n",
     "\n",
     "# define o token de acesso\n",
     "# para criar basta clicar em \"Create my access token\"\n",
     "# passa o \"Access Token\" e o \"Access Token Secret\"\n",
-    "auth.set_access_token('1332386851274043395-GSz66Y4R1OJTI46dR6d4ySC6xoXgXw',\n",
-    "\t\t'yYuuBT7Viqke6TsZwzDqVHuGWvQZsF1zpulnsClg63Wpu')\n",
+    "auth.set_access_token('Inserir chaves da API',\n",
+    "\t\t'Inserir chaves da API')\n",
     "\n",
     "# cria um objeto api\n",
     "api = tweepy.API(auth)\n",
@@ -59,7 +59,7 @@
     "\treturn tweets # retorna a lista de tweets\n",
     "\n",
     "# escreve os tweets em um arquivo 'tweets.txt'\n",
-    "tweets = obter_tweets(usuario='LucianoHuck', limite=500)\n",
+    "tweets = obter_tweets(usuario='inserir username', limite=500)\n",
     "data_hoje = datetime.now().strftime('%Y-%m-%d-%H-%M-%S')\n",
     "with open(f'tweets_{data_hoje}.txt', 'w', encoding='utf8') as f:\n",
     "\tf.write('\\n'.join(tweets))"
